Add Block class (.h) and Transaction Class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,7 @@ set(CMAKE_C_CLANG_TIDY "clang-tidy")
 # Include the source files.
 add_subdirectory(src)
 
-# In current courses that teach C, we use the Criterion testing framework. If
-# If you want to use a different framework, or if you want to skip testing
-# entirely (not recommended), change the lines below.
+# Criterion Testing framework
 include(CTest)
 find_library(CRITERION criterion REQUIRED)
 set(CRITERION_FLAGS --verbose -j1)
