--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,28 @@ project(CelestrixBlockchain
         VERSION 1.0
         LANGUAGES CXX)
 
-set(CMAKE_C_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_C_FLAGS "-Wall -Wextra")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wdouble-promotion")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-branches")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-cond")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wdouble-promotion")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-branches")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-cond")
 # The following line is only needed in LLVM/clang
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wimplicit-fallthrough")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wlogical-op")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wmisleading-indentation")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wnull-dereference")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wshadow")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wsign-conversion")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunreachable-code")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wimplicit-fallthrough")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wlogical-op")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wmisleading-indentation")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wnull-dereference")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wshadow")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wsign-conversion")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wunreachable-code")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wunused")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -g")
 
 # No options are set here because the configuration is set in .clang-tidy
 # instead. If that file is not present, clang-tidy will be of limited help.
-set(CMAKE_C_CLANG_TIDY "clang-tidy")
+set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
 
 # Include the source files.
 add_subdirectory(src)
