Implement sha256 hashing class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,11 @@
-# If you have a program that's just a .c file and it has a main method, define
-# an executable. If it has both a .c and .h file, make it a library. Also, link
-# libraries appropriately here. Targets should be added in dependency order - if
-# executable bar needs library foo, then you should do
-#   add_library(foo foo.c foo.h)
-#   add_executable(bar bar.c)
-#   target_link_libraries(bar PRIVATE foo)
-# or similar. The PRIVATE/INTERFACE/PUBLIC keyword will depend on whether the
-# library is used only in function bodies (PRIVATE), only in function
-# signatures/types (INTERFACE), or both (PUBLIC).
+# Project config for src/
 
 add_executable(main main.cpp)
 
-add_library(BlockchainLib
+add_library(Blockchain
         Block.cpp Block.h
         Transaction.cpp Transaction.h
-        Blockchain.cpp Blockchain.h)
+        Blockchain.cpp Blockchain.h
+        sha256.cpp sha256.h)
 
-target_link_libraries(main PRIVATE BlockchainLib)
+target_link_libraries(main PRIVATE Blockchain)
