--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,21 +7,21 @@ project(CelestrixBlockchain
 set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -pedantic")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wdouble-promotion")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-branches")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wduplicated-cond")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wconversion")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wdouble-promotion")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wduplicated-branches")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wduplicated-cond")
 # The following line is only needed in LLVM/clang
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wimplicit-fallthrough")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wlogical-op")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wmisleading-indentation")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wnull-dereference")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wshadow")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wsign-conversion")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wunreachable-code")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wunused")
-set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wimplicit-fallthrough")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wlogical-op")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wmisleading-indentation")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wnull-dereference")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wshadow")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsign-conversion")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wunreachable-code")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wunused")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
 # No options are set here because the configuration is set in .clang-tidy
 # instead. If that file is not present, clang-tidy will be of limited help.
