--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,3 +23,13 @@ add_test(
     NAME test_transaction
     COMMAND test_transaction ${CRITERION_FLAGS}
 )
+
+add_executable(test_blockchain test_blockchain.cpp)
+target_link_libraries(test_blockchain
+    PRIVATE Blockchain
+    PUBLIC ${CRITERION}
+)
+add_test(
+    NAME test_blockchain
+    COMMAND test_blockchain ${CRITERION_FLAGS}
+)
