Add block signature verification code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,6 @@
 # Project config for src/
 
-#add_executable(main main.cpp)
-
-# add_library(Block Block.h Block.cpp)
-# add_library(Blockchain Blockchain.h Blockchain.cpp)
-# add_library(Transaction Transaction.h Transaction.cpp)
-# add_library(sha256 sha256.h sha256.cpp)
+add_executable(main main.cpp)
 
 add_library(Blockchain
         Block.cpp Block.h
@@ -13,5 +8,9 @@ add_library(Blockchain
         Blockchain.cpp Blockchain.h
         sha256.cpp sha256.h)
 
+# External libraries
+find_package(OpenSSL REQUIRED)
+
+target_link_libraries(Blockchain PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 
 #target_link_libraries(main PRIVATE )
