--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project config for src/
 
-#add_executable(main main.cpp)
+add_executable(main main.cpp)
 
 add_library(Blockchain
         Block.cpp Block.h
@@ -14,4 +14,4 @@ find_package(nlohmann_json 3.2.0 REQUIRED)
 
 target_link_libraries(Blockchain PRIVATE OpenSSL::SSL OpenSSL::Crypto ${nlohmann_json_INCLUDE_DIRS})
 
-#target_link_libraries(main PRIVATE )
+target_link_libraries(main PRIVATE Blockchain)
