Fixed SIGSEGV bug (remove merkle tree)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,4 +14,4 @@ find_package(nlohmann_json 3.2.0 REQUIRED)
 
 target_link_libraries(Blockchain PRIVATE OpenSSL::SSL OpenSSL::Crypto ${nlohmann_json_INCLUDE_DIRS})
 
-target_link_libraries(main PRIVATE Blockchain)
+target_link_libraries(main PRIVATE Blockchain OpenSSL::SSL OpenSSL::Crypto ${nlohmann_json_INCLUDE_DIRS})
