--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,10 @@ add_library(Blockchain
         Blockchain.cpp Blockchain.h
         sha256.cpp sha256.h)
 
-# External libraries
+# Link external libraries
 find_package(OpenSSL REQUIRED)
-
-target_compile_options(Blockchain PRIVATE "-Wno-deprecated-declarations")
-
 target_link_libraries(Blockchain PRIVATE OpenSSL::SSL OpenSSL::Crypto)
-
 target_link_libraries(main PRIVATE Blockchain OpenSSL::SSL OpenSSL::Crypto)
+
+# Suppress OpenSSL deprecated warnings
+target_compile_options(Blockchain PRIVATE "-Wno-deprecated-declarations")
